themes/estate/trunk/style.less
/* ... */
sup {
	bottom: 1ex;
}
sub {
	top: .5ex;
}
small {
	font-size: 75%;
}
big {
	font-size: 125%;
}
figure {
	margin: 0;
}
table {
	margin: 0 0 1.5em 0;
	width: 100%;
}
th {
	font-weight: bold;
}
button,
input,
select,
textarea {
/* Corrects font size not being inherited in all browsers */
	font-size: 100%;

/* Addresses margins set differently in IE6/7, F3/4, S5, Chrome */
	margin: 0;

/* Improves appearance and consistency in all browsers */
	vertical-align: baseline;
	*vertical-align: middle;
	.box-sizing(border-box);

}
button,
input {
/* Addresses FF3/4 setting line-height using !important in the UA stylesheet */
	line-height: normal;
/* Corrects inner spacing displayed oddly in IE6/7 */
	*overflow: visible;

}
button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
	.rounded(3px);
	.button-style(#e6e6e6);
	.box-shadow(~"inset 0 1px 0 rgba(255, 255, 255, 0.8)");
	color: rgba(0, 0, 0, 0.8);

	/* Improves usability and consistency of cursor style between image-type 'input' and others */
	cursor: pointer;

	/* Corrects inability to style clickable 'input' types in iOS */
	-webkit-appearance: button;

	font-size: 0.75em;
	font-weight: 500;
	line-height: 1;
	padding: 0.75em 1.5em;
	color: #555;

	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
}
button:hover,
html input[type="button"]:hover,
input[type="reset"]:hover,
input[type="submit"]:hover {
	.button-style(lumlighten(#e6e6e6, 2%));
}
button:focus,
html input[type="button"]:focus,
input[type="reset"]:focus,
input[type="submit"]:focus,
button:active,
html input[type="button"]:active,
input[type="reset"]:active,
input[type="submit"]:active {

}

input[type="checkbox"],
input[type="radio"] {
	.box-sizing(border-box);
	padding: 0;
	/* Addresses excess padding in IE8/9 */
}

input[type="search"] {
	/* Addresses appearance set to searchfield in S5, Chrome */
	-webkit-appearance: textfield;

	/* Addresses box sizing set to border-box in S5, Chrome (include -moz to future-proof) */
	.box-sizing(border-box);
}

input[type="search"]::-webkit-search-decoration {
	/* Corrects inner padding displayed oddly in S5, Chrome on OSX */
	-webkit-appearance: none;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
	/* Corrects inner padding and border displayed oddly in FF3/4 www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/ */
	border: 0;
	padding: 0;
}

input[type=text],
input[type=email],
input[type=password],
textarea {
	.box-sizing(border-box);
	color: #666;
	border: 1px solid #ccc;
	border-radius: 3px;
}

input[type=text]:focus,
input[type=email]:focus,
input[type=password]:focus,
textarea:focus {
	color: #111;
}

input[type=text],
input[type=email],
input[type=password] {
	padding: 3px;
}

textarea {
	/* Removes default vertical scrollbar in IE6/7/8/9 */
	overflow: auto;
	/* Improves readability and alignment in all browsers */
	vertical-align: top;
}

/* Alignment */

.alignleft {
	display: inline;
	float: left;
	margin-right: 1.5em;
}
.alignright {
	display: inline;
	float: right;
	margin-left: 1.5em;
}
.aligncenter {
	clear: both;
	display: block;
	margin: 0 auto;
}

/* Text meant only for screen readers */

.assistive-text {
	clip: rect(1px 1px 1px 1px);
/* IE6, IE7 */

	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
}

.page-links{
	clear:both;
}

/* =General Layout
----------------------------------------------- */

@container_width: 1040px;

.container {
	width: @container_width;
	margin: 0 auto;
	.box-sizing(border-box);
}

/* =Masthead
----------------------------------------------- */

#masthead {
	background: #F1F1F1;

	hgroup {
		width: @container_width;
		margin: 0 auto;
		padding: 40px 0;

		.site-title {
			font-weight: bold;
			font-size: 28px;
			margin-bottom: 2px;
			line-height: 1;
			color: #3c3c3c;

			a{
				text-decoration: none;
				color: inherit;
			}
		}

		.site-description {
			color: #555;
			font-size: 13px;
		}
	}
}

/* =Menu
----------------------------------------------- */

.main-navigation {
	.gradient(#242424,#242424,#323232);
	.box-shadow(~"inset 0 1px 0 rgba(255,255,255,0.15)");

	border-top: 1px solid #101010;
	border-bottom: 1px solid #111111;

	.container {
		min-height: 49px;
	}

	.noise {
		/* Add the gradient noise */
		background: url(images/decoration/noise.png);
	}

	ul {
		.clearfix();
		font-size: 13px;
		list-style: none;
		margin: 0;
		padding-left: 0;
	}

	li {
		display:block;
		position: relative;
		float:left;

		&:last-child {
			margin-right: 0;
		}
	}

	a {
		position: relative;
		line-height: 1em;
		display: block;
		text-decoration: none;
		padding: 18px 30px;
		color: #E0E0E0;
		font-weight: 500;
	}

	a:before, li:last-child a:after {
		content: '';
		position: absolute;
		top: 0;
		height: 100%;
		width: 2px;
		background: url(images/decoration/menu-sep.png) repeat-y;
	}

	a:before {
		left: 0;
	}

	li:last-child a:after {
		right: 0;
	}

	ul {

		/* Second level menu items */
		ul {
			padding-top: 1px;
			display: none;
			position: absolute;
			top: 100%;
			left: 0;
			z-index: 99999;

			li {
				background: #222;
				float:none;

				&:first-child {
					/* A subtle little shadow */
					.box-shadow(inset 0 5px 0 rgba(0,0,0,0.15));
				}
			}

			a:before, a:after{
				display: none
			}
		}

		/* Third level menu items */
		ul ul {
			left: 100%;
			top: 0;

			li:first-child {
			/* A subtle little shadow */
				.box-shadow(inset 5px 0 0 rgba(0,0,0,0.15));
			}
		}

		ul a {
			.box-sizing(border-box);
			padding: 15px 30px;
			width: 180px;
			color: #CCC;
		}

		li:hover > ul {
			display: block;
		}
	}

	#searchform {
		float: right;
		margin: 10px 0 0 0;

		#s {
			outline: none;
			.rounded(4px);
			.bordered(#101010,#080808,#000000,#080808);
			padding: 6px 14px;
			border: 1px solid #222;
			.gradient(#2a2a2a,#1a1a1a,#2a2a2a);
			font-size: 12px;
			font-weight: bold;
			.box-shadow(inset 1px 1px 1px rgba(0,0,0,0.15));
			color: #CCC;
		}

		#searchsubmit {
			display: none;
		}
	}
}
/* ... */

